ACÁ FUNCIONA EL SISTEMA PERFECTAMENTE PERO NO ARRASTRA LOS DETALLES